@@ -123,6 +123,8 @@ typedef pthread_t ub_thread_t;
 #define ub_thread_create(thr, func, arg) LOCKRET(pthread_create(thr, NULL, func, arg))
 /** get self id. */
 #define ub_thread_self() pthread_self()
+/** wait for another thread to terminate */
+#define ub_thread_join(thread) LOCKRET(pthread_join(thread, NULL))
 
 #else /* we do not HAVE_PTHREAD */
 #ifdef HAVE_SOLARIS_THREADS
@@ -153,6 +155,7 @@ typedef mutex_t lock_quick_t;
 typedef thread_t ub_thread_t;
 #define ub_thread_create(thr, func, arg) LOCKRET(thr_create(NULL, NULL, func, arg, NULL, thr))
 #define ub_thread_self() thr_self()
+#define ub_thread_join(thread) LOCKRET(thr_join(thread, NULL, NULL))
 
 #else /* we do not HAVE_SOLARIS_THREADS and no PTHREADS */
 
@@ -180,12 +183,14 @@ typedef int lock_quick_t;
 #define lock_quick_unlock(lock) /* nop */
 
 /** Thread creation, threads do not exist */
-typedef int ub_thread_t;
+typedef pid_t ub_thread_t;
 /** ub_thread_create gives an error, it should not be called. */
 #define ub_thread_create(thr, func, arg) \
+	ub_thr_fork_create(thr, func, arg)
 	fatal_exit("%s %d called thread create, but no thread support "  \
 		"has been compiled in.",  __FILE__, __LINE__)
-#define ub_thread_self() 0
+#define ub_thread_self() getpid()
+#define ub_thread_join(thread) ub_thr_fork_wait(thread)
 
 #endif /* HAVE_SOLARIS_THREADS */
 #endif /* HAVE_PTHREAD */
