@@ -1,3 +1,7 @@
+27 February 2007: Wouter
+	- ub_thread_join portable definition.
+	- forking is used if no threading is available.
+
 26 February 2007: Wouter
 	- ub_random code used to select ID and port.
 	- log code prints thread id.
